--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -264,6 +264,7 @@
       </p>
     <div class="clearfix"style="margin:30px;">
         <h4 >Engagement funnel</h4>
+        <p class="text">From the quantitative analysis, we found a smaller number of audience with deeper engagement, synthesized as <b>"WBUR's Engagement Funnel".</b></p>
         <div class="col-lg-6">
             <img src="wbur/engagement.png" alt="" width="50%;"/>
             </div>
@@ -271,6 +272,7 @@
                 <img src="wbur/engagementt.png" alt="" width="50%;"/>
               </div>
         <h4 >Donor's journey</h4>
+        Combing qualitative analysis, 
       
           <div>
           <ul style="list-style-type:none;">
