--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="col-lg-4 col-md-6 cover research">
                 <a href="pages/napster.html">
-                    <img src="p_image/napster.jpg" class="img-responsive" alt="" />
+                    <img src="pages/napster/napster.jpg" class="img-responsive" alt="" />
                     <p class='cover_des'>
                         <b>UX Research @ Napster</b><br><br>Usability baseline benchmark
                     </p>
