--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -313,7 +313,7 @@
               </g>
           </g>
       </svg>
-          <i><b>Become aware of WBUR brand</b></i><br> For our longtime listeners and lifelong Boston residents, it is hard to remember a time before knowing WBUR (!), but this is a critical point in a donor’s journey. Listeners, in order to get to a point of donation, they must be aware of WBUR as a brand, distinct from WGBH (the “other” Boston NPR station) and from NPR. For listeners to a specific syndicated program, particularly on demand, they may not recognize WBUR’s brand until the program explains multiple times the relationship between the program and WBUR.</li>
+          <i><b>Become aware of WBUR brand</b></i><br> For our longtime listeners and lifelong Boston residents, it is hard to remember a time before knowing WBUR, but this is a critical point in a donor’s journey. Listeners, in order to get to a point of donation, they must be aware of WBUR as a brand, distinct from WGBH (the “other” Boston NPR station) and from NPR. For listeners to a specific syndicated program, particularly on demand, they may not recognize WBUR’s brand until the program explains multiple times the relationship between the program and WBUR.</li>
           <br>
           <li><svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
