--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -109,7 +109,7 @@
   <h1>INTRODUCTION</h1>
   <h3>Context</h3>
   <p class="text">
-      During Summer 2018, I interned as a UX Researcher (a team of four) at the <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> of <a href="https://www.wbur.org">WBUR - Boston's NPR News Station</a>. Bizlab is a team running separately from core WBUR, quickly testing ideas for new revenue for public radio. Bizlab's goal for 2018 summer was only transferring validated concepts to WBUR, using existing research and test identified ideas without disrupting existing operations in 10 weeks.
+      During Summer 2018, I interned as a UX Researcher (a team of four) at the <a href="http://publicradiobizlab.org/author/wendi/">Public Radio Business Laboratory</a> of <a href="https://www.wbur.org">WBUR - Boston's NPR News Station</a>. Bizlab is a team running separately from core WBUR, quickly testing ideas for new revenue for public radio. Bizlab's goal for 2018 summer was only transferring validated concepts to WBUR, using existing research and testing identified ideas without disrupting existing operations in 10 weeks.
       I was utilizing both qualitative and quantitative research methods to explore unrealized revenue potential in existing listener offerings for soliciting donations.
       <!--
       Whether it’s an interview on-air, a news story that caught someone’s eye on our website, an episode of a podcast with critical thinking, or a post on social media, public radio is no longer just a voice people listen to during drive time on the car radio. Every touch WBUR has with our audience contributes to our audience’s experience, and impacts how they relate to our station.
