--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -272,7 +272,7 @@
                 <img src="wbur/engagementt.png" alt="" width="50%;"/>
               </div>
         <h4 >Donor's journey</h4>
-        Combing qualitative analysis, 
+        Combing qualitative analysis, we found people are standing in different stages from a listener to being a supporter.
       
           <div>
           <ul style="list-style-type:none;">
