--- a/pages/napster.html
+++ b/pages/napster.html
@@ -76,6 +76,7 @@
             <div class="box">
               <h4>TEAM</h4>
               <h5>Product Director</h5>
+              <h5>Product Manager</h5>
               <h5>Product Designers</h5>
               <h5>2 UX Researchers (me)</h5>
               
