--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -272,7 +272,7 @@
                 <img src="wbur/engagementt.png" alt="" width="50%;"/>
               </div>
         <h4 >Donor's journey</h4>
-        Combing qualitative analysis, we found people need to go through different stages transferring from a listener to a supporter.
+        Combing qualitative analysis, we found while people transferring from a normal listener to a supporter, each of them needs to go through a journey containing multiple steps:
       
           <div>
           <ul style="list-style-type:none;">
