--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -354,7 +354,24 @@
        
         </p>
       <div class="clearfix"style="margin:30px;">
+        <p class="text">
+          Refered the finding from <a href="https://membershippuzzle.org/articles-overview/why-supporters-pay-for-journalism">Why supporters pay for journalism (hint: it’s not about exclusive access)</a> that: be transparent about finance could help make people feel the need to support things represet the value they care about.
+          We designed a quick A/B test to see:  
+        </p>
+        <ul>
+          <li><b>Are people interested in knowing what resources support the newsroom / the role wbur plays in their life? </b>
+          </ul>
+      <div class="clearfix"style="margin:30px;">
+          
+          <div class="col-lg-6">
+              <img src="wbur/emtion_cover.png" alt="" width="50%;"/>
+              </div>
+              <div class="col-lg-6">
+                  <img src="wbur/data_cover.png" alt="" width="50%;"/>
+                </div>
           <h4 >Quick set up</h4>
+          We placed 2 pictures at the end the short recruitment survey for <a href="http://cynthiayue.cc/bookshelf.html">WBUR Bookshelf project</a>
+
           <h4 ></h4>
           <h4 >Insights</h4>
         </div>
