--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -123,6 +123,7 @@
     </p>
 
     <h3>Research objective</h3>
+    <b>How do we communicate effectively with every single one of 500,000 unique listeners about <i>why they hould donate?</i></b>
     <ul>
         <li><b>Who are the WBUR listeners? </b>
         <br>Inform the station whom they are providing content for, building background knowledge for the station to develop better audience-empathy.
@@ -260,7 +261,7 @@
     <h3>Audiences' Donating Journey Study
     </h3>
     <p class="text">
-        From the quantitative analysis, we found a smaller number of audience with deeper engagement, synthesized as <b>"WBUR's Engagement Funnel".</b>
+        WBUR’s radio programming and podcasts have a national following, but not all of these regular listeners are ready to support — they may not know what WBUR is and they may not be emotionally committed to the programming they are listening to. From the quantitative analysis, we found <b>"WBUR's Engagement Funnel"</b> that a smaller number of audience are with deeper engagement.  
 
       </p>
     <div class="clearfix"style="margin:30px;">
@@ -272,7 +273,8 @@
                 <img src="wbur/engagementt.png" alt="" width="50%;"/>
               </div>
         <h4 >Donor's journey</h4>
-        Combing qualitative analysis, we found while people transferring from a normal listener to a supporter, each of them needs to go through a journey containing multiple steps:
+        <p>To design specific messages to speak to the personas, we needed to articulate to ourselves the <i><b>WBUR Donor Journey</b> — the path a user takes from first listening to WBUR programming to eventually donating</i>. The purpose in doing this is to ensure that we target our communication to users based on where they are in the journey.
+        Combing qualitative analysis, we found while people transferring from a normal listener to a supporter, each of them needs to go through a journey containing 5 steps:</p>
       
           <div>
           <ul style="list-style-type:none;">
@@ -326,7 +328,7 @@
                 </g>
             </g>
         </svg>
-          <i><b>Become an insider of WBUR community</b></i><br> When someone is loyal to a program and aware of WBUR, we consider them to be transitioning into an “insider.” Insiders view WBUR as important to them, either because it makes them smarter, it keeps them up on the news, or it speaks to them emotionally. The work required to usher someone to this insider status is not easy, and we have drawn a lot of inspiration from The Membership Puzzle and their guidance on hosting communities of practice.</li>
+          <i><b>Become an insider of WBUR community</b></i><br> When someone is loyal to a program and aware of WBUR, we consider them to be transitioning into an “insider.” Insiders view WBUR as important to them, either because it makes them smarter, it keeps them up on the news, or it speaks to them emotionally. The work required to usher someone to this insider status is not easy, and we have drawn a lot of inspiration from <a href="https://membershippuzzle.org">The Membership Puzzle</a> and their guidance on <a href="https://membershippuzzle.org/articles-overview/cheatsheet-for-hosting-communities-of-practice">hosting communities of practice</a>.</li>
           <br><li><svg width="24px" height="30px" viewBox="0 0 24 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: Sketch 49.2 (51160) - http://www.bohemiancoding.com/sketch -->
             <title>Group</title>
@@ -342,11 +344,16 @@
                 </g>
             </g>
         </svg>
-          <i><b>Support</b></i><br> We’ve reached the summit with our user and they are ready to donate! Or are they? The moment people have an impulse to donate is influenced many factors, and we highly recommend Erez Yoeli‘s TEDx talk on how to increase altruistic moments. We also recommend reading “Why supporters pay for journalism (hint: it’s not about exclusive access),” from the Membership Puzzle.</li>
-
+          <i><b>Support</b></i><br> We’ve reached the summit with our user and they are ready to donate! Or are they? The moment people have an impulse to donate is influenced many factors, and we highly recommend <a href="http://www.erezyoeli.com">Erez Yoeli</a>‘s <a href="https://www.youtube.com/watch?v=c3qHDHMhdSQ">TEDx talk on how to increase altruistic moments</a>. We also recommend reading <a href="https://membershippuzzle.org/articles-overview/why-supporters-pay-for-journalism">“Why supporters pay for journalism (hint: it’s not about exclusive access),”</a> from the Membership Puzzle.</li>
           </p>
+        </div>
+          <h4 >Insight</h4>
+          <div class="col-lg-6">
+              <img src="wbur/journey.jpg" alt="" width="50%;"/>
+            </div>
+            <div class="col-lg-6">
+            <p><b>Based on this 5 stage Donor's journey, the 3 persona we need to target and start our communication with are at <i>Stage 3 Become aware of WBUR brand</i> or <i>Stage 4 Become an insider of WBUR community</i>.</b></p>
           </div>
-      </div>
   </section>
   <section class="page clearfix"  >
       <h3 style="margin-top:20px;">A/B Test</h3>
@@ -370,7 +377,7 @@
                   <img src="wbur/data_cover.png" alt="" width="50%;"/>
                 </div>
           <h4 >Quick set up</h4>
-          We placed 2 pictures at the end the short recruitment survey for <a href="http://cynthiayue.cc/bookshelf.html">WBUR Bookshelf project</a>
+          We placed 1 of the 2 pirctures above at the end the short recruitment survey for <a href="http://cynthiayue.cc/bookshelf.html">WBUR Bookshelf project</a>, and add a "donate" button below the picture to see the click rate.
 
           <h4 ></h4>
           <h4 >Insights</h4>
@@ -384,9 +391,9 @@
     <h3 style="padding-top:20px;">Engagement experiment</h3>
   
     <p>
-        With three personas in hand, we designed an experiment to test the effectiveness of communicating to WBUR’s audience by persona. We wanted to determine two things with an experiment: know if the personas reflect unique populations in our listener audience and understand, if we communicated to users in the language and perspective of their persona, that they will engage more with us. As a reminder, the three personas are the Aspirational Learner, the World Citizen, and the Lifelong Listener which represent why someone listens to WBUR: either to get smarter, to track the news, or to feel an emotional connection.
+        With three personas in hand, we designed an experiment to test the effectiveness of communicating to WBUR’s audience by persona. We wanted to determine two things with an experiment: know if the personas reflect unique populations in our listener audience and understand, if we communicated to users in the language and perspective of their persona, that they will engage more with us. As a reminder, the three personas are the Aspirational Learner, the World Citizen, and the Lifelong Listener which represent why someone listens to WBUR: either to get smarter, to track the news, or to feel an emotional connection.</p>
 
-        The structure of the experiment was to find users loyal to WBUR via Facebook Ads, ask them a question to have them self-select their persona, and then take them through a series of interactive messages explaining why they should donate. If everything worked perfectly, users who got the correct persona messaging would complete a donation.
+       <p> The structure of the experiment was to find users loyal to WBUR via Facebook Ads, ask them a question to have them self-select their persona, and then take them through a series of interactive messages explaining why they should donate. If everything worked perfectly, users who got the correct persona messaging would complete a donation.
         
 
 
