--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -387,7 +387,7 @@
     </section>-->
 
 
-<section class="page clearfix grey" >
+<section class="page clearfix" >
     <h3 style="padding-top:20px;">Engagement experiment</h3>
   
     <p>
