--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -536,10 +536,10 @@
         </div>
     </section>
     <section class="page clearfix" >
-        <h3 style="padding-top:20px;">Experiment Findings</h3>
+        <h3 style="padding-top:20px;">Experiment results</h3>
         From the ads, we had 406 participants in the experiment. Below is a summary of our discoveries and observations.
         <div class="clearfix" style="margin:30px;">
-            <h4>Overlapping personas</h4>
+            <h4>Finding: Overlapping personas</h4>
             <p>Based on how these users selected amongst the three personas, we can say that these three personas exist, but they are not significantly distinct from each other. 53% of users clicked “All of the above,” indicating that our personas overlap for a significant portion of the audience.</p>
             <div class="col-lg-12">
             <img src="wbur/f1.png" alt="" style="width:80%;"/>
@@ -551,6 +551,66 @@
                 <li>And 53% chose “All of the above.”</li>
               </ul>
               <p>While half our audience agreed with all statements, we have evidence now that <b>a message focused on just one of these themes will not resonate with about 30% of listeners</b>. This is a useful metric to keep in mind when crafting donation messaging — not all messages works for all listeners.</p>
+        </div>
+        <div class="clearfix" style="margin:30px;">
+        <h4>Observation: Significant Drop Off Through the Funnel</h4>
+        <p>As anyone in digital marketing or web analytics knows, users bounce and drop off through any user experience. This experiment is no different. So we saw users drop off between clicking on a persona button and landing on the next page of the experience, and then throughout the scroll of the messaging page. This chart illustrates the drop off and highlights a lesson we should have known: we need more than 406 users to enter the funnel if we want to receive donations at the end.</p>
+        <div class="col-lg-12">
+            <img src="wbur/Drop pff.png" alt="" style="width:90%;"/>
+            </div>
+        </div>
+
+        <div class="clearfix" style="margin:30px;">
+        <h4>Observation: Scrolling through Persona Messages</h4>
+        <p>When users clicked on persona, they entered a scrolling page of messaging, either aligned to their persona or not. Overall, 56% of users who landed on the page to read the message scrolled to the bottom of the page, irregardless of the messaging. There is some variation in which messages generated the most scrolling, as shown in the table below, but the numbers within each category are too small to draw definitive conclusions.</p>
+        <table style="width:100%">
+            <tr>
+              <th>USERS SCROLLING TO BOTTOM OF PAGE WHEN…</th>
+              <th>ASPIRATIONAL LEARNER</th> 
+              <th>WORLD CITIZEN</th>
+              <th>LIFELONG LISTENER</th>
+            </tr>
+            <tr>
+              <td>Message aligned to their persona</td>
+              <td>55%</td>
+              <td>62%</td>
+              <td>54%</td>
+            </tr>
+            <tr>
+              <td>Message mis-aligned to their persona</td>
+              <td>55%</td>
+              <td>60%</td>
+              <td>20%</td>
+            </tr>
+            
+              </table>
+           <p>Users who selected “All of the above” were randomly assigned to the different persona messages. The percentage of users scrolling to the bottom of the page may indicate that our <b>Lifelong Learner message and imagery worked better</b>: 67% people who saw the Lifelong Listener message scrolled to the bottom of the page, which is the best performance among the three. But overall, this indicates that the messages worked equally well at engaging a user in scrolling through.</p>
+           <table style="width:100%">
+              <tr>
+                  <th>MESSAGE SEEN BY
+                      AN “ALL OF THE ABOVE” USER</th>
+                  <th>PERCENTAGE REACHING
+                      BOTTOM OF MESSAGE</th> 
+                </tr>
+                <tr>
+                  <td>Aspirational Learner message</td>
+                  <td>56.8%</td>
+                  </tr>
+                  <tr>
+                      <td>World Citizen message</td>
+                      <td>52.6%</td>
+                      </tr>
+                      <tr>
+                          <td>Lifelong Listener message</td>
+                          <td>66.7%</td>
+                          </tr>
+            </table>
+        </div>
+        <div class="clearfix" style="margin:30px;">
+          <h4>Finding: Our Donors are Engaged</h4>
+          <p>Of the 104 people who reached the bottom of the page with the call-to-action buttons, 3 people clicked “support” and 34 people clicked “I’ve supported before.” 67 people did not click a button.</p>
+          <p>We conclude from this that at least 33% of experiment participants were donors. This rate is approximately double the rate of listeners who are donors (which is approximately 15%). Our existing donors are <b>connected to us</b>, willing to try out our pilots, and looking to engage with us. </p>
+        </div>
 
     <!--
 
