--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -610,7 +610,10 @@
           <h4>Finding: Our Donors are Engaged</h4>
           <p>Of the 104 people who reached the bottom of the page with the call-to-action buttons, 3 people clicked “support” and 34 people clicked “I’ve supported before.” 67 people did not click a button.</p>
           <p>We conclude from this that at least 33% of experiment participants were donors. This rate is approximately double the rate of listeners who are donors (which is approximately 15%). Our existing donors are <b>connected to us</b>, willing to try out our pilots, and looking to engage with us. </p>
+          <p><b>Customized messages engage people more, but only the form of this experiment are not persuasive enough for people in different stage of their own journey.</b></p>
+
         </div>
+        
 
     <!--
 
