--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -277,7 +277,7 @@
               </div>
         <h4 >Donor's journey</h4>
         <p>To design specific messages to speak to the personas, we needed to articulate to ourselves the <i><b>WBUR Donor Journey</b> — the path a user takes from first listening to WBUR programming to eventually donating</i>. The purpose in doing this is to ensure that we target our communication to users based on where they are in the journey.
-        Combing qualitative analysis, we found while people transferring from a normal listener to a supporter, each of them needs to go through a journey containing 5 steps:</p>
+        Combing qualitative analysis, we found while people transferring from a normal listener to a supporter, each of them needs to go through a journey containing 5 stages:</p>
       
           <div>
           <ul style="list-style-type:none;">
