--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -400,7 +400,7 @@
         We designed an experiment to test the effectiveness of communicating to WBUR’s audience by persona. We wanted to determine two things with an experiment: 
         <ul>
         <li><b>If the personas reflect unique populations in our listener audience?</b></li>
-        <li><b>If we communicated to users in the language and perspective of their persona, that they will engage more with us? even move to support stage?</b></li> 
+        <li><b>If we communicated to users in the language and perspective of their persona, that they will engage more with us? even move to support stage, the destination of their jounrney?</b></li> 
         </ul>
       <p>As a reminder, the 3 personas are the <b>Aspirational Learner, the World Citizen, and the Lifelong Listener</b> which represent why someone listens to WBUR: either to get smarter, to track the news, or to feel an emotional connection.</p>
       <div class="clearfix" style="margin:30px;">
