--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -407,7 +407,7 @@
 
       <h4>Experimental design</h4>
        <p> The structure of the experiment was to find users loyal to WBUR via Facebook Ads, ask them a question to have them self-select their persona, and then take them through a series of interactive messages explaining why they should donate. If everything worked perfectly, users who got the correct persona messaging would complete a donation. 
-         <p>We used Between group experimental design, users will be matched to one persona by self-selection, and they will randomly receive 1 of the 3 messages. Users who received bthe message designed for self-selected persona will be in experimental group, users who reveice the other messages are in control group.
+         <p>We used Between group experimental design, users will be matched to one persona by self-selection, and they will randomly receive 1 of the 3 messages. Users who received the message designed for self-selected persona will be in experimental group, users who reveice the other messages are in control group.
         
 
 
