--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -496,7 +496,7 @@
               </tr>
           </table>
           <h4>User experience for: <a href="http://publicradiobizlab.org/wbur/index_wbur.html">Why do you love WBUR?</a></h4>
-          <p>The core messaging experience is presented in a custom, mobile-friendly web page. It is designed as a scrolling one-page site so we can can control the experiment conditions by pointing users to different pages and track engagement by tracking scroll depth and button clicks. We used Google’s suite of analytics tools, including <a href="https://optimize.google.com/optimize/home/#/accounts">Optimize</a>, for splitting experimental conditions and tracking.
+          <p>The core messaging experience is presented in a custom, mobile-friendly web page. It is designed as a scrolling one-page site so we can control the experiment conditions by pointing users to different pages and track engagement by tracking scroll depth and button clicks. We used Google’s suite of analytics tools, including <a href="https://optimize.google.com/optimize/home/#/accounts">Optimize</a>, for splitting experimental conditions and tracking.
           <p>Using Optimize and Facebook’s built-in A/B testing, we randomized the messaging a person received, so 80% of people got the message aligned to their persona and 20% of the people saw a message aligned to an incorrect persona. If someone selected “all of the above,” they had a 33.3% chance of seeing each message.
             <p>Below are miniature screenshots of each persona’s experience. You can also check out the experience yourself with our prototype: <a href="http://publicradiobizlab.org/wbur/index_wbur.html">Why do you love WBUR?</a>
             <div class="col-md-4 col-sm-6">
