--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -123,7 +123,7 @@
     </p>
 
     <h3>Research objective</h3>
-    <b>How do we communicate effectively with every single one of 500,000 unique listeners about <i>why they hould donate?</i></b>
+    <b>How do we communicate effectively with every single one of 500,000 unique listeners about <i>why they should donate?</i></b>
     <ul>
         <li><b>Who are the WBUR listeners? </b>
         <br>Inform the station whom they are providing content for, building background knowledge for the station to develop better audience-empathy.
