--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="pages/Ticket-Analysis/index.html">
                     <img src="pages/aspera.jpg" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>UX Research @ IBM</b><br><br>
+                        <b>UX Research @ IBM</b><br><br>Hybrid large-scale Secondary Research
                     </p>
                 </a>
             </div>
