--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <div class="clearfix" id='coverlist' style="padding:0 12%; margin:0 auto;">
             <div class="col-lg-4 col-md-6 cover research">
-                <a href="pages/Ticket-Analysis/ibm.html">
+                <a href="pages/ibm.html">
                     <img src="pages/aspera.jpg" class="img-responsive" alt="" />
                     <p class='cover_des'>
                         <b>UX Research @ IBM</b><br><br>Hybrid large-scale Secondary Research
