--- a/pages/ibm.html
+++ b/pages/ibm.html
@@ -21,10 +21,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500" rel="stylesheet">
 
     <!-- Styling -->
-    <link href="../pages/Ticket-Analysis/css/style.css" rel="stylesheet">
+    <link href="../p_css/ibm_style.css" rel="stylesheet">
 
     <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-    <script src="../pages/Ticket-Analysis/plugins/d3.js"></script>
+    <script src="../p_js/d3.js"></script>
     <script type="text/javascript" src="http://kozea.github.com/pygal.js/latest/pygal-tooltips.min.js"></script>
 
 
@@ -79,7 +79,7 @@
 
         <div class="olympic-section-wrapper" style="grid-row: 2 / 3;grid-column:2/span 2;">
 
-            <embed type="image/svg+xml" src="data.svg" width="100%" />
+            <embed type="image/svg+xml" src="../p_image/ibmimg/data.svg" width="100%" />
 
         </div>
         <div class="olympic-section-wrapper" style="grid-row: 2 / 3;grid-column:4/span 2;">
@@ -109,7 +109,7 @@
 
         <!-- legend -->
         <div style="grid-column: 2 / span 2; grid-row: 3 / span 1;vertical-align:bottom">
-            <embed type="image/svg+xml" src="img/all.svg" style="transform:translate(10,10)" />
+            <embed type="image/svg+xml" src="p_image/ibmimg/all.svg" style="transform:translate(10,10)" />
         </div>
         <div class="olympic-section-wrapper" style="grid-column:4 /span 2 ; grid-row:3/ span 1;">
             <div id="olympic-feather-legend" style=" ">
@@ -118,7 +118,7 @@
                 </p>
 
             </div>
-            <embed type="image/svg+xml" src="img/legend.svg" />
+            <embed type="image/svg+xml" src="p_image/ibmimg/legend.svg" />
 
             <div id="olympic-feather-legend" style=" ">
                 <p class="bold-start">Horizontal lollipop represents </p>
@@ -143,7 +143,7 @@
 
         <div class="olympic-section-wrapper" style="grid-row: 4/5; grid-column:2/span 3;">
 
-            <embed type="image/svg+xml" src="img/treemap.svg" width="100%" />
+            <embed type="image/svg+xml" src="p_image/ibmimg/treemap.svg" width="100%" />
 
         </div>
         <div class="olympic-section-wrapper" style="grid-row: 4/5; grid-column:5/span 1;margin-top:46%">
@@ -203,10 +203,10 @@
         </div>
         <div class=" feature" style="grid-column: 3 / span 1; grid-row: 5 / span 1;">
 
-            <embed type="image/svg+xml" src="img/transfer.svg" />
+            <embed type="image/svg+xml" src="p_image/ibmimg/transfer.svg" />
         </div>
         <div class=" feature" style="grid-column: 3 / span 1; grid-row: 5 / span 1;z-index:-1;">
-            <embed type="image/svg+xml" src="img/transferl.svg" width="100%" />
+            <embed type="image/svg+xml" src="p_image/ibmimg/transferl.svg" width="100%" />
         </div>
 
 
@@ -296,7 +296,7 @@
         </div>
     </div>
 
-    <script src="../pages/Ticket-Analysis/js/script.js "></script>
+    <script src="../p_js/ibmscript.js "></script>
 
 </body>
 
