--- a/pages/ibm.html
+++ b/pages/ibm.html
@@ -41,7 +41,7 @@
 
         <div class="olympic-section-wrapper" style="grid-column: 2 / span 3; grid-row: 1 / 2;">
             <div id="olympic-introduction">
-                <p class="bold-start">This project is an analysis of Jira & Salesforce support tickets for Product X. The timeline of the tickets starts from 2016 Jun to now. Implementing quantitative research on knowing what and followed qualitative research on learning how.
+                <p>This project is an analysis of Jira & Salesforce support tickets for Product X. The timeline of the tickets starts from 2016 Jun to now. Implementing quantitative research on knowing what and followed qualitative research on learning how.
                     This project is dedicating to help stakeholders make data-informed design decisions from a broader sight. What can we know from the ticket analysis?</p>
                 <p class="bold-start">
                     What feature buckets do we have?
@@ -57,7 +57,7 @@
                         </li>
                     </ul>
                 </p>
-                <p class="bold-start">What are the usability issues each feature bucket reflects?<br> How is the heuristics' distribution for each feature bucket?<br> How is the distribution over time? </p>
+                <p class="bold-start">What are the usability issues each feature bucket reflects? How is the heuristics' distribution for each feature bucket? How is the distribution over time? </p>
                 The usability issue each ticket reflects can categorize the ticket into one of <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">10 Heuristics</a>, which provides an all-around evaluation of user experience. Each ticket
                 also has status showing if it is an archived, a working on or a fresh new ticket, telling what has been done in the past and what needs to be done now. Putting tickets into the crossing of 2 dimensions: Heuristics, ticket status, showing
                 for Each feature bucket:
