--- a/pages/ibm.html
+++ b/pages/ibm.html
@@ -19,6 +19,7 @@
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
 
     <!-- Styling -->
     <link href="../p_css/ibm_style.css" rel="stylesheet">
