--- a/pages/ibm.html
+++ b/pages/ibm.html
@@ -115,7 +115,7 @@
         <div class="olympic-section-wrapper" style="grid-column:4 /span 2 ; grid-row:3/ span 1;">
             <div id="olympic-feather-legend" style=" ">
                 <p>Each set of lollipops reflects the usability issues distribution for a specific bucket support tickets [e.g. feature bucket] over 3 status of support tickets: "Archived", "Working" and "New". The left set of lollipops presents distribution
-                    for Faspex tickets.
+                    for ProductX tickets.
                 </p>
 
             </div>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="olympic-section-wrapper head-title-wrapper" style="grid-column: 1 / 2; grid-row: 4 / 5;">
-            <h1 id="olympic-legend-title">FASPEX<br>Feature buckets</h1>
+            <h1 id="olympic-legend-title">Product X<br>Feature buckets</h1>
 
         </div>
 
